# AI-CIA-3

./: Data_Mining_CIA_4.ipynb  README.md  config.py  pyproject.toml  requirements.txt
models/: preprocessor.pkl
notebooks/: 01_eda_preprocessing.ipynb  02_modeling_evaluation.ipynb
