[project]
name = "ai-cia-3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib==1.4.2",
    "kagglehub>=1.0.0",
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "optuna==4.3.0",
    "polars==1.19.0",
    "pyarrow==19.0.1",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "shap==0.47.2",
    "xgboost==2.1.4",
]
